# NEXTPAGE

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.atl/: skill-registry.md
android/: settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/schemas/com.nextpage.data.local.AppDatabase/: 5.json
android/app/src/main/: AndroidManifest.xml
desktop/: .env.example  AGENTS.md  bun-svelte-plugin.ts  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
desktop/src/: App.home-redesign.test.ts  App.svelte  main.ts  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/migrations/: 0001_init.sql  0002_books.sql  0003_highlights.sql  0004_desktop_feature_parity.sql  0005_hidden_books.sql  0006_collections.sql  0007_highlight_note_and_page_contract.sql  0008_queue_and_perf_indexes.sql
desktop/src-tauri/src/: commands.rs  db.rs  error.rs  feature_flags.rs  lib.rs  logger.rs  main.rs  models.rs  repository.rs  state.rs
desktop/src-tauri/src/queue/: benchmark.rs  handlers.rs  mod.rs  repository.rs  types.rs  worker.rs
desktop/src-tauri/src/services/: job_service.rs  library_service.rs  mod.rs
desktop/src-tauri/src/telemetry/: mod.rs  models.rs
desktop/src-tauri/tests/: parity_integration.rs
desktop/src/lib/: appState.ts  homeState.test.ts  homeState.ts  index.ts  tauriClient.test.ts  tauriClient.ts  types.ts
desktop/src/lib/api/: index.ts  (+1 more)
desktop/src/test/: setup.ts  utils.ts
(+287 files in other folders)
