[package]
name = "nextpage-desktop"
version = "0.1.0"
description = "NextPage desktop shell"
authors = ["NextPage"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde", "clock"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.1.1", features = [] }
tauri-plugin-deep-link = "2.0.0"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
